# arc

./: .gitignore  .gitlab-ci.yml  .onedev-buildspec.yml  ArcCompiler.sln  COMMIT_STANDARD.md  Doxyfile  LICENSE  README.md  ROADMAP.md
ANTLR/: .gitignore  ArcSourceCodeLexer.g4  ArcSourceCodeParser.g4
ANTLR/test/: actions.js  input.txt  input1.txt
Executables/Circle/: Arc.Compiler.Circle.csproj  CommandManager.cs  Program.cs
Executables/Cmdec/: Arc.Cmdec.csproj  CommandListWindow.cs  DecodeResult.cs  DecodedCommand.cs  DecodedConstant.cs  DecodedFunctionEntry.cs  DecodedPackage.cs  Decoder.cs  Memory.cs  Program.cs  Utils.cs
Libraries/CommandGenerator/: Arc.CompilerCommandGenerator.csproj  Class1.cs  Utils.cs
Libraries/Lexer/: Arc.Compiler.Lexer.csproj  Tokenizer.cs
Libraries/Parser/: Arc.Compiler.Parser.csproj  Pipeline.cs  Utils.cs
Libraries/Shared/: Class1.cs
Tests/: Arc.Compiler.Tests.csproj  UnitTest1.cs  demo.arc  sample1.arp
docs/: README.md  index.md  next.config.ts  package.json  pnpm-lock.yaml  source.config.ts  tsconfig.json
docs/app/: global.css  (+5 more)
examples/: derivationShowcase.script.arc  digits.script.arc  fibonacci.script.arc  helloWorld.script.arc  lambda.script.arc  lambdaInGroup.script.arc  listShowcase.script.arc  maxMin.script.arc
src/: Dockerfile
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/cli/src/commands/: init.rs
src/cli/src/models/: cli_options.rs  mod.rs  options.rs  project_info.rs
src/cli/templates/: default_executable.script.arc  default_library.script.arc  default_proj_conf.toml  default_src_main.script.arc
(+885 files in other folders)
